--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,11 @@
-name: build-and-deploy-min
+name: build-and-deploy
 on:
   push:
     branches: [ "main" ]
     paths:
+      - "files/**"
       - "site/**"
+      - "scripts/**"
       - ".github/workflows/**"
   workflow_dispatch:
 
@@ -23,11 +25,20 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # index.json이 없으면 빈 배열로 생성 (페이지 로딩 에러 방지)
-      - name: Ensure index.json exists
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install Python deps
         run: |
-          mkdir -p site
-          [ -f site/index.json ] || echo "[]" > site/index.json
+          python -m pip install --upgrade pip
+          pip install pymupdf python-pptx openpyxl
+
+      - name: Build index (writes site/index.json and copies files to site/files)
+        run: |
+          python scripts/indexer.py
+          test -f site/index.json || echo "[]" > site/index.json
           ls -la site
 
       - name: Setup Pages
